package com.telenav.fiasco.runtime.tools.network;

public class Deployer extends BaseNetworkTool
{
}
