package com.telenav.fiasco.runtime.tools.network;

public class Publisher extends BaseNetworkTool
{
}
