package com.telenav.fiasco.tools.network;

import com.telenav.fiasco.tools.Tool;

public interface NetworkTool extends Tool
{
}
